--- a/web_front_practice/static/index.html
+++ b/web_front_practice/static/index.html
@@ -9,18 +9,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="static/styles/my_styles.css">
+    <!-- Custom Scripts -->
+    <script src="static/scripts/my_script.js"></script>
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script>
+        // Will execute as soon as browser reaches this point:
+        // window.alert("Hi")
+        // window.alert("Hello")
+        // Function declaration:
+        // function showAlert() {
+        //     window.alert("Loaded")
+        // }
+        // window.addEventListener("load", showAlert)
+    </script>
 </head>
 
 <body>
     <h1 class="text-info">Homepage</h1>
     <img class="img-fluid" src="static/imgs/dog-640-426.jpeg" style="width: 500px">
 
-    <button type="button" class="btn btn-primary">Click Me</button>
+    <button type="button" class="btn btn-primary" onclick="window.alert('Button clicked')">
+        Display Alert
+    </button>
 </body>
 
 </html>
