my first JS code

--- a/web_front_practice/static/index.html
+++ b/web_front_practice/static/index.html
@@ -30,12 +30,15 @@
 </head>
 
 <body>
-    <h1 class="text-info">Homepage</h1>
+    <h1 id="my-header" class="text-info">Homepage</h1>
     <img class="img-fluid" src="static/imgs/dog-640-426.jpeg" style="width: 500px">
 
     <button type="button" class="btn btn-primary" onclick="window.alert('Button clicked')">
         Display Alert
     </button>
+
+    <button type="button" class="btn btn-primary" onclick="changeHeaderToRed()">Change Header Color</button>
+    <button type="button" class="btn btn-primary" onclick="switchColor('btn')">Switch BG color</button>
 </body>
 
 </html>
