bootstrap usage, html & css, JS

--- a/web_front_practice/static/index.html
+++ b/web_front_practice/static/index.html
@@ -39,6 +39,11 @@
 
     <button type="button" class="btn btn-primary" onclick="changeHeaderToRed()">Change Header Color</button>
     <button type="button" class="btn btn-primary" onclick="switchColor('btn')">Switch BG color</button>
+    <button type="button" class="btn btn-primary" onmouseout="this.innerHTML='Bye'"
+        onmouseover="this.innerHTML='Hello'">Hello</button>
+
+    <button class="btn btn-link" ondblclick="document.getElementById('my-header').style.display = 'None'">Hide
+        Header</button>
 </body>
 
 </html>
