--- a/web_front_practice/static/h1_exercises/ex1.html
+++ b/web_front_practice/static/h1_exercises/ex1.html
@@ -19,9 +19,11 @@
 
 <body>
 
-    <div>
-        <p class="date-par" style="margin-left: 10px" id="date-par"></p>
-        <button class="btn btn-primary" style="margin-left: 10px" onclick="dateToggle(this)">Show Date</button>
+    <div
+        style="height: 100vh; width: 100vw; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        <p class="date-par" style="margin-left: 10px;" id="date-par"></p>
+        <button class="btn btn-primary" style="margin-left: 10px;" onclick="dateToggle(this)">Show
+            Date</button>
     </div>
 
 </body>
